# allophoneme

./: Cargo.toml  README.md  template.xlsx
.github/: CODEOWNERS
.github/workflows/: build.yaml  pull-request.yaml
migrations/: 20230215084550_stocks_table.down.sql  20230215084550_stocks_table.up.sql  20230215092129_stocks_updated_at.down.sql  20230215092129_stocks_updated_at.up.sql  20230216022053_stocks_update.down.sql  20230216022053_stocks_update.up.sql
src/: allophone.rs  cli.rs  constant.rs  database.rs  doodle.rs  doodle_similarity.rs  excel.rs  ipa_encoding.rs  ipa_encoding_pair.rs  levenshtein.rs  main.rs  word_ipa_pair.rs
src/cli/: mod.rs  welcome.rs
src/excel/: mod.rs
