[package]
name = "graham2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
dotenv = "0.15.0"
tokio = { version = "1.25.0", features = ["full"] }
sqlx = { version = "0.6", features = [ "macros", "migrate", "postgres", "runtime-actix-native-tls" ] }
